--- a/Algoritmy na mrizich/prednasky/07_prednaska.tex
+++ b/Algoritmy na mrizich/prednasky/07_prednaska.tex
@@ -1,113 +1,126 @@
 %12/11/2021
-\subsection{Opakování}
-L úplná mříž v $\Real^n$. Pak $\exists x_1,x_2,\ldots,x_n\in L$ lineárně nezávislé, $\|x_i\|=\lambda_i(L)\ \forall 1\leq i\leq n$
-$x_i$ nenulový vektro L s nejmenší normou ... $\|x_1\|=\lambda_1(L)$\\
-$x_1,x_i$ máme, $x_{i+1}$ vektor z $L\setminus <x_1,\ldots,x_i>_{\Real}$ s nejmenší normou\\
-$\|x_i\|\geq\lambda_i(L)$. Pokud $\|x_i\|>\lambda_i(L),\ M=\{v\in L | \|v\|<\|x_i\| \}$ obsahuje $i$ LN vektorů. Proto $M\setminus <x_1,\ldots,x_{i-1}>_{\Real} \neq\emptyset$, $i$-tý vektor by měl mít normu $<\|x_i\|$\\
-\\
-Máme $x_1,\ldots,x_n\in L$ LN $\|x_i\|=\lambda_i(L),\ v\in L\setminus\{0\}$. Nechť $k\in \N$ je největší takové, že $\|v\|\geq\lambda_k(L)$. Pak $v\in <x_1,x_2,\ldots,x_k>_{\Real}$
-\begin{itemize}
-    \item Pokud $k=n\rightarrow x_1,\ldots,x_n$ je báze $\Real^n$
-    \item $k<n\rightarrow$ Nechť $v\notin<x_1,\ldots,x_k>_{\Real},\ M=\{u\in L | \|u\|\leq\|v\| \}$ obsahuje $x_1,x_2,\ldots,x_k,v\rightarrow\lambda_{kM}(L)\leq\|v\|\ldots$ spor s volbou $k$
-\end{itemize}
-
-
 \subsection{Gram-Schmidtova ortogonalizace}
-
-$b_1,b_2,\ldots,b_k$ LN vektory v $\Real^n$. G-S ortogonalizace nalezne $b_1^*,b_2^*,\ldots,b_k^*\in \Real^n$ splňující
+Nechť $b_1,b_2,\ldots,b_k$ jsou LN vektory v $\Real^n$. Gram-Schmidtova ortogonalizace nalezne\\ $b_1^*,b_2^*,\ldots,b_k^*\in \Real^n$ splňující
 \begin{enumerate}
-    \item $b_i^*\cdot b_j^*=0\ \forall 1\leq i \neq j \leq k$
-    \item $b_i^*=b_i -x_i,\ x_i\in<b_1,\ldots,b_{i-1}>_{\Real}$ pro $i=1,\ldots,k\ (i=1\implies b_1=b_1^*)$
+    \item $b_i^*\cdot b_j^*=0\ \forall 1\leq i \neq j \leq k$,
+    \item $b_i^*=b_i -x_i,\ x_i\in<\!b_1,\ldots,b_{i-1}\!>_{\Real}$ pro $i=1,\ldots,k\ (i=1\implies b_1=b_1^*)$
 \end{enumerate}
 
 \begin{note}
-$<b_1,\ldots,b_i>_{\Real}=<b_1^*,\ldots,b_i^*>_{\Real}\ \forall 1\leq i\leq k$, $b_i^*+x_i=b_i, x_i\in <b_1^*,\ldots,b_{i_1}^*>_{\Real}\ b_i^* \perp x_i,\ b_i^*$ je kolmá projekce $b_i$ do $<b_1,\ldots,b_{i-1}>^{\perp}$\\
-$\|b_i^*\|^2+\|x_i\|^2=\|b_i\|^2\implies\|b_i^*\|^2\leq \|b_i\|^2$
+\phantom{}
+\begin{itemize}
+    \item $<\!b_1,\ldots,b_i\!>_{\Real}=<\!b_1^*,\ldots,b_i^*\!>_{\Real}\ \forall 1\leq i\leq k$,
+    \item $b_i^*+x_i=b_i, \ x_i\in <b_1^*,\ldots,b_{i-1}^*>_{\Real}$, $b_i^* \perp x_i$, t.j. $b_i^*$ je kolmá projekce $b_i$ do $<\!b_1,\ldots,b_{i-1}\!>^{\perp}$ a platí $\|b_i^*\|^2+\|x_i\|^2=\|b_i\|^2\implies\|b_i^*\|^2\leq \|b_i\|^2.$
+\end{itemize}
 \end{note}
+\pagebreak
 
 \begin{lemma}
 $L\subseteq (\Real^n,+)$ mříž s bází $b_1,b_2,\ldots,b_k$. Pak $\lambda_1(L)\geq \min \{\|b_1^*\|,\ldots,\|b_k^*\|\}$
 \end{lemma}
 \begin{proof}
-Chceme $\forall 0\neq v\in L$ $\|v\|\geq \{\|b_1^*\|,\ldots,\|b_k^*\|\}$.\\
-$v=\sum_{i=1}^k z_ib_i,\ z_1,\ldots,z_k\in\Z,\ l\in\{1,\ldots,k\},\ z_l\neq 0, z_{l+1}=\cdots=z_k=0$\\
-$v=z_lb_l^*+\sum_{i=1}^{l-1}r_ib_i^*$ pro $r_1,\ldots,r_{l-1}\in\Real$, TADY KOUSEK CHYBÍ!!!
+Chceme $\forall 0\neq v\in L: \ \|v\|\geq \{\|b_1^*\|,\ldots,\|b_k^*\|\}$. Zvolme takové $v$, pak
+$v=\sum_{i=1}^k z_ib_i$, pro nějaké $z_1,\ldots,z_k\in\Z$. Zvolme $l\in\{1,\ldots,k\}$, tak, aby $z_l\neq 0$ a $z_{l+1}=\cdots=z_k=0$. Pak\\
+$v=z_lb_l^*+\sum_{i=1}^{l-1}r_ib_i^*$ pro vhodná $r_1,\ldots,r_{l-1}\in\Real$, a platí $$\|v\|^2 = z_l^2\|b_l^*\|^2 + \sum_{i=1}^{l-1}r_i^2\|b_i^*\|^2 \geq \|b_l^*\|^2,$$ a tudíž $\|v\| \geq \|b_l^*\| \geq \min\{\|b_1^*,\dots,b_k^*\}$.
 \end{proof}
 
 \begin{notation}
-$b_i^*=b_i-\sum_{j=1}^{i-1} u_{i,j}b_j^*,\ u_{i,j}=\frac{b_i\cdot b_j^*}{b_j^*\cdot b_j^*}$
-\end{notation}
-Chceme vyjádření $x_i=\sum_{j=1}^{i-1} r_jb_j,\ r_1,\ldots,r_{i-1}\in \Real,\ (b_i-x_i)\cdot b_t=O\ \forall t=1,2,\ldots,i-1$\\
-$\forall t=1,\ldots,i-1$ $0=(b_i-\sum_{j=1}^{i-1}r_j b_j)\cdot b_t \iff \sum_{j=1}^{i-1}(b_t\cdot b_j)r_j=b_i b_t$ $\forall t=1,\ldots,i-1 \iff (matice s prvkem\  b_t\cdot b_j)\cdot \vecttt{r_1}{r_2}{\vdots}{r_{i-1}}=\vecttt{b_i\cdot b_1}{b_i\cdot b_2}{\vdots}{b_i\cdot b_{i-1}}$ .
-Tato matice se nazývá \emph{Grammova matice} vektorů $b_1,\ldots,b_{i-1}$. Značíme ji
-$G_{b_1,\ldots,b_{i-1}}$
-.\\
-Koeficienty $r_1,\ldots,r_{i-1}$ získám řešením soustavy lineárních rovnic s maticí $G_{b_1,\ldots,b_{i-1}}$.
+$b_i^*=b_i-\sum_{j=1}^{i-1} u_{i,j}b_j^*,\ u_{i,j}=\frac{b_i\cdot b_j^*}{b_j^*\cdot b_j^*}$.
 
-\begin{claim}
-$b_1,b_2,\ldots,b_k\in\Real^n$ LN, $\det G_{b_1,\ldots,b_{i-1}}=\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2\leq\|b_1\|^2\|b_2\|^2\cdots\|b_k\|^2$ - Hadamardova nerovnost.
+Chceme vyjádření $x_i=\sum_{j=1}^{i-1} r_jb_j,\ r_1,\ldots,r_{i-1}\in \Real,\ (b_i-x_i)\cdot b_t=0\ \forall t=1,2,\ldots,i-1$.
+
+Jest 
+\begin{align*}
+    0=(b_i-\sum_{j=1}^{i-1}r_j b_j)\cdot b_t & \iff  \sum_{j=1}^{i-1}(b_t\cdot b_j)r_j=b_i b_t \ \forall t=1,\ldots,i-1\\
+    & \iff \begin{pmatrix}
+b_1 \cdot b_1 & \dots & b_1 \cdot b_j & \dots & b_1 \cdot b_{i-1}\\
+\vdots & \ddots & \vdots & & \vdots\\
+b_t \cdot b_1 & \dots & b_t\cdot b_j & \dots & b_t \cdot b_{i-1}\\
+\vdots & & \vdots & \ddots & \vdots\\
+b_{i-1} \cdot b_1 & \dots & b_{i-1}\cdot b_j & \dots & b_{i-1} \cdot b_{i-1}\\
+\end{pmatrix} \vecttt{r_1}{r_2}{\vdots}{r_{i-1}}=\vecttt{b_i\cdot b_1}{b_i\cdot b_2}{\vdots}{b_i\cdot b_{i-1}}.
+\end{align*}
+Tato matice se nazývá \emph{Gramova matice} vektorů $b_1,\ldots,b_{i-1}$. Značíme ji
+$G_{b_1,\ldots,b_{i-1}}$.
+
+Koeficienty $r_1,\ldots,r_{i-1}$ získáme řešením soustavy lineárních rovnic s maticí $G_{b_1,\ldots,b_{i-1}}$ a pravou stranou $(b_i \cdot b_1 \ \ldots \ b_i \cdot b_{i-1})^T$.
+\end{notation}
+
+\begin{claim}[Hadamardova nerovnost]
+Nechť $b_1,b_2,\ldots,b_k\in\Real^n$ jsou lineárně nezávislé, pak $\det G_{b_1,\ldots,b_{i-1}}=\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2\leq\|b_1\|^2\|b_2\|^2\cdots\|b_k\|^2$.
 \end{claim}
 
-\begin{proof}\phantom{}\\
-$A=(b_1|b_2|\cdots|b_k)\in M_{n,k}(\Real)$\\
-$B=(b_1^*|b_2^*|\cdots|b_k^*)\in M_{n,k}(\Real)$\\
-$A^T\cdot A=G_{b_1,\ldots,b_{i-1}}$ - na pozici $(t,j)$ je prvek $b_t\cdot b_j$\\
-$B^T\cdot B=G_{b_1^*,\ldots,b_{i-1}^*}=\diag(\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2)$\\
-$b_i^*+\sum_{j=1}^{i-1}\mu_{i,j}b_j^*=b_i$\\
-$A=B.$(matice která tady není!!!!! -  doplnit)\\
-$A=BU$\\
-$\det G_{b_1,\ldots,b_{i-1}}=\det A^T A=\det U^T(B^T B)U=\det (U^T)\cdot \det(B^T B)\cdot \det(U)=\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2$\\
-$\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2\leq\|b_1\|^2\|b_2\|^2\cdots\|b_k\|^2$ plyne z $\|b_i^*\|\leq\|b_i\|$
+\begin{proof}
+Položme $A:=(b_1|b_2|\cdots|b_k)\in M_{n,k}(\Real)$, $B:=(b_1^*|b_2^*|\cdots|b_k^*)\in M_{n,k}(\Real)$. Pak
+$A^TA=G_{b_1,\ldots,b_{i-1}}$, neboť na pozici $(t,j)$ je prvek $b_t\cdot b_j$.
+Podobně $B^TB=G_{b_1^*,\ldots,b_{i-1}^*}=\diag(\|b_1^*\|^2,\|b_2^*\|^2,\dots\|b_k^*\|^2)$.
+
+Vyjádříme-li pro všechna $i \in \{1,\dots,k\}$ $b_i = b_i^*+\sum_{j=1}^{i-1}\mu_{i,j}b_j^*$, pak $A=BU$ pro
+\begin{align*}
+    U := 
+\begin{pmatrix}
+1 & \mu_{2,1} & \mu_{3,1} & \dots & \mu_{k,1}\\
+0 &     1     & \mu_{3,2} & \dots & \mu_{k,2}\\
+0 &     0     &     1     & \dots & \mu_{k,3}\\
+\vdots & \vdots & \vdots & \ddots & \vdots\\
+0 &     0     &     0     & \dots & 1
+\end{pmatrix}.
+\end{align*}
+Dále $\det G_{b_1,\ldots,b_{i-k}}=\det A^T A=\det U^T(B^T B)U=\det (U^T)\cdot \det(B^T B)\cdot \det(U)=\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2$, a nakonec z $\|b_i^*\|\leq\|b_i\| \ \forall i \in \{1,\dots,k\}$ plyne 
+$\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2\leq\|b_1\|^2\|b_2\|^2\cdots\|b_k\|^2$.
 \end{proof}
 
 \begin{reminder}
-$L=\Z b_1+\cdots\Z b_k \subseteq\Real^n$ $d(L)=\sqrt{\det A^T A}$, kde $A=(b_1|b_2|\cdots|b_k)$\\
-$d(L)=\sqrt{\det A^T A}=\|b_1^*\|^2\|b_2^*\|^2\cdots\|b_k^*\|^2\ldots$ lze chápat jako k-rozměrný objem množiny $F=\{\sum_{i=1}^{k}r_i b_i| r_i\in <0,1)\}$ v $\Real^n$\\
+Pro obecnou mříž $L=\Z b_1+\cdots\Z b_k \subseteq\Real^n$ definujeme $d(L):=\sqrt{\det A^T A}$, kde $A=(b_1|b_2|\cdots|b_k)$. Pak
+$d(L)=\sqrt{\det A^T A}=\|b_1^*\|\cdot\|b_2^*\|\cdot\ldots\cdot\|b_k^*\|$, tedy $d(L)$ lze chápat jako $k$-rozměrný objem množiny $F=\{\sum_{i=1}^{k}r_i b_i \ | \ r_i\in [0,1)\}$ v $\Real^n$.
 \end{reminder}
 
 \subsection{Gaussova redukce úplné dvourozměrné mříže}
 \begin{definition}
-$L\subseteq (\Real^2,+)$ úplná mříž, $(b_1,b_2)$ báze $L$ se nazývá \emph{nejkratší báze L}, pokud 
+Nechť $L\subseteq (\Real^2,+)$ úplná mříž. Báze $(b_1,b_2)$ mříže $L$ se nazývá \emph{nejkratší báze} $L$, pokud 
 \begin{enumerate}
-    \item $b_1,b_2$ je báze $L$
-    \item $\forall v\in L\setminus\{0\}:\ \|v\|\geq \|b_1\|$
-    \item $\forall v\in L\setminus<b_1>_{\Real}:\ \|v\|\geq\|b_2\|$
+    \item $\forall v\in L\setminus\{0\}:\ \|v\|\geq \|b_1\|$,
+    \item $\forall v\in L\setminus<\!b_1\!>_{\Real}:\ \|v\|\geq\|b_2\|$.
 \end{enumerate}
 \end{definition}
 
 \begin{example}
-$e_1=\vectttt{1}{0}{0}{0}{0}$, $e_2=\vectttt{0}{1}{0}{0}{0}$, $\ldots$, $e_5=\vectttt{0}{0}{0}{0}{1}$, $f=\vectttt{1/2}{1/2}{1/2}{1/2}{1/2}$\\
-$L=\Z e_1+\Z e_2+\cdots+\Z e_5+\Z f$\\
-báze $e_1,e_2,e_3,e_4,f$ $e_5=2f-e_1=e_2-e_3-e_4$\\
-$L$ nemá nejkratší bázi, tedy bázi $b_1,b_2,\ldots,b_5$\\
-$b_1\ldots$ nejkratší vektor $L\setminus\{0\}$, $b_2\ldots$ nejkratší vektor $L\setminus<b_1>_{\Real}$,\ldots $b_i\ldots$ nejkratší vektor $L\setminus<b_1,\ldots,b_{i-1}>_{\Real}$\\
-$v\in L\setminus\{0\}\twopart{v\in\Z^5}{\|v\|\geq 1}{v\in f+\Z^5}{\|v\|\geq\sqrt{5\cdot 1/4}>1}$
+Položme $L=\Z e_1+\Z e_2+\cdots+\Z e_5+\Z f$, kde
+$$e_1=\vectttt{1}{0}{0}{0}{0}, \ e_2=\vectttt{0}{1}{0}{0}{0}, \ldots, \ e_5=\vectttt{0}{0}{0}{0}{1}, \ f=\vectttt{1/2}{1/2}{1/2}{1/2}{1/2}.$$
+Množina $\{e_1,e_2,e_3,e_4,f\}$ tvoří bázi $L$ a platí  $e_5=2f-e_1=e_2-e_3-e_4$. Ukážeme, že $L$ nemá nejkratší bázi, tedy bázi $\{b_1,b_2,\ldots,b_5\}$, kde
+$b_1$ je nejkratší vektor $L\setminus\{0\}$, $b_2$ je nejkratší vektor $L\setminus<\!b_1\!>_{\Real}$,\ldots $b_i$ je nejkratší vektor $L\setminus<\!b_1,\ldots,b_{i-1}\!>_{\Real}$.
 
-
-TADY CHYBÍ SEZNAM, čemu nálěží které b i a že f nenáleží tomu, co generují
-
-
+Je-li $v\in L\setminus\{0\}$, pak buď $v\in\Z^5 \implies \|v\|\geq 1$, nebo $v\in f+\Z^5 \implies \|v\|\geq\sqrt{5\cdot 1/4}>1$. Volme tedy postupně
+\begin{align*}
+    b_1 & \in \{\pm e_1,\dots,\pm e_5\} \text{ takové, že }\|b_1\| = 1,\\
+    b_2 & \in \{\pm e_1,\dots,\pm e_5\} \setminus \{\pm b_1\} \text{ takové, že } \|b_2\| = 1,\\
+    b_3 & \in \{\pm e_1,\dots,\pm e_5\} \setminus \{\pm b_1, \pm b_2\} \text{ takové, že }\|b_3\| = 1,\\
+    b_4 & \in \{\pm e_1,\dots,\pm e_5\} \setminus \{\pm b_1, \pm b_2, \pm b_3\}\text{ takové, že }\|b_4\| = 1,\\
+    b_5 & \in \{\pm e_1,\dots,\pm e_5\} \setminus \{\pm b_1, \pm b_2, \pm b_3, \pm b_4\}\text{ takové, že }\|b_5\| = 1.
+\end{align*}
+Avšak $f \notin \Z b_1 + \ldots + \Z b_5 = \Z^5$, a tudíž nejkratší báze $L$ by musela obsahovat alespoň 6 vektorů, spor.
 \end{example}
 
 \begin{definition}[Algoritmus - Gaussova redukce mříže]\phantom{}\\
-VSTUP:$(b_1,b_2)$ báze $L\subseteq\Z^2$\\
-VÝSTUP: nejkratší báze $L$
+\underline{Vstup:} $(b_1,b_2)$ báze $L\subseteq\Z^2$\\
+\underline{Výstup:} nejkratší báze $L$
 \begin{enumerate}
-    \item Repeat
-    \begin{itemize}
-        \item if $\|b_2\|\leq \|b_1\|$ then vyměň hodnoty proměnných $b_1$ a $b_2$\\
-    $x:=\lfloor\mu_{2,1}\rceil=\lfloor\frac{b_2\cdot b_1}{b_1\cdot b_1}\rceil$ (celočíselné zaokrouhlení $\mu_{2,1}$)\\
-    $b_2:=b_2-xb_1$
-    \end{itemize}
-     until $x=0$
-     \item return $(b_1,b_2)$
+    \item \textbf{repeat}
+    \begin{enumerate}[label=\roman*]
+        \item \textbf{if} $\|b_2\| < \|b_1\|$:\\
+        $\- $ vyměň hodnoty proměnných $b_1$ a $b_2$
+        \item $x:=\lfloor\mu_{2,1}\rceil=\lfloor\frac{b_2\cdot b_1}{b_1\cdot b_1}\rceil$ \textit{//celočíselné zaokrouhlení} $\mu_{2,1}$
+        \item $b_2:=b_2-xb_1$
+    \end{enumerate}
+     \textbf{until} $x=0$
+     \item \textbf{return} $(b_1,b_2)$
 \end{enumerate}
 \end{definition}
 
-TADY NECO CHYBÍ
-
-\begin{note}[Zaokrouhlení]
-Pokud $\mu_{2,1}\in 1/2 \pm \Z$, lze $\mu_{2,1}$ zaokrouhlit nahoru i dolů. Ale pokud $\mu_{2,1}=\pm 1/2$, zaokrouhlíme vždy na nulu!
+\begin{note}
+Položme $b'_2 := b_2 - xb_1$ pro $x = \lfloor \mu_{2,1} \rceil$. Pak $b'_2 := L \cap (b_2 + <\!b_1\!>_{\Real})$ je bod $L$ na přímce $b_2 + <\!b_1\!>_{\Real}$ nejbližší k $b_2^* = $ ortogonální projekce $b_2$ na $<\!b_1\!>^\perp$.
 \end{note}
 
-
+\begin{note}[Zaokrouhlení]
+Pokud $\mu_{2,1}\in 1/2 \pm \Z$, lze $\mu_{2,1}$ zaokrouhlit nahoru i dolů. Ale pokud $\mu_{2,1}=\pm 1/2$, zaokrouhlíme vždy na nulu! (jinak může nastat endless loop)
+\end{note}
